--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -58,7 +58,7 @@ textarea {
 }
 
 body {
-	text-rendering: optimizeLegibility;
+	//text-rendering: optimizeLegibility;
 	word-wrap: break-word;
 	-webkit-overflow-scrolling: touch;
 	-webkit-text-size-adjust: none;
