--- a/src/components/Products/grid.scss
+++ b/src/components/Products/grid.scss
@@ -1,497 +1,487 @@
 .brick-wall {
-  margin:0 ($gutter_width/2)*-1;
-  padding-top:38px;
-  padding-bottom:100px;
-  position:relative;
-	flex-flow: row wrap;
-	@include breakpoint($smedium + 1) {
-		display: flex;
-	}
-
+  margin: 0 ($gutter_width/2) * -1;
+  padding-top: 38px;
+  padding-bottom: 100px;
+  position: relative;
+  flex-flow: row wrap;
+  @include breakpoint($smedium + 1) {
+    display: flex;
+  }
 }
 
 .brick {
-  box-sizing:border-box;
-  padding:$gutter_width/2;
-	@include breakpoint($large + 1) {
-		flex: 0 1 33.33%;
-	}
-	@include breakpoint(0 $large) {
-		flex: 0 1 50%;
-	}
+  box-sizing: border-box;
+  padding: $gutter_width/2;
+  @include breakpoint($large + 1) {
+    flex: 0 1 33.33%;
+  }
+  @include breakpoint(0 $large) {
+    flex: 0 1 50%;
+  }
   @include breakpoint(0 $smedium) {
-		width:100%;
-		max-width:430px;
-		margin:0 auto;
+    width: 100%;
+    max-width: 430px;
+    margin: 0 auto;
   }
 
   @for $i from 0 through ($brickCountPerRequest) {
-		&.brick-#{$i} .fixed-ratio-content {
-	  transition: transform 1.2s #{$i * $brickAnimationDelay}s ease, opacity 2s #{$i * $brickAnimationDelay}s ease;
-	}
+    &.brick-#{$i} .fixed-ratio-content {
+      transition: transform 1.2s #{$i * $brickAnimationDelay}s ease, opacity 2s #{$i * $brickAnimationDelay}s ease;
+    }
   }
 
   &.brick-quotes .fixed-ratio-content {
-	background-color:black;
+    background-color: black;
   }
   .img-quotes {
-	opacity:0.7;
+    opacity: 0.7;
   }
   .fixed-ratio-content {
-	opacity:1;
-	transform: translateY(0px);
-
+    opacity: 1;
+    transform: translateY(0px);
   }
   &.off-view {
+    .fixed-ratio-content {
+      opacity: 0;
+      transform: translateY(-20px);
 
-		.fixed-ratio-content {
-			opacity:0;
-			transform: translateY(-20px);
-
-			.brick-text-plain {
-				opacity:0;
-				& + .brick-plus {
-					opacity:0;
-				}
-			}
-		}
+      .brick-text-plain {
+        opacity: 0;
+        & + .brick-plus {
+          opacity: 0;
+        }
+      }
+    }
   }
 
   &.brick-double {
-	max-width:inherit;
-	.fixed-ratio-content {
-	  background-color:black;
-	}
-	img {
-	  opacity:0.8;
-	}
-	@include breakpoint($large + 1) {
-		flex: 0 1 66.66%;
-	}
-	@include breakpoint(0 $large) {
-		flex: 0 1 50%;
-
-	}
-	video {
-	  height:auto;
-	  left:50%;
-	  overflow:hidden;
-	  position:absolute;
-	  top:50%;
-	  transform: translate(-50%, -50%);
-	}
+    max-width: inherit;
+    .fixed-ratio-content {
+      background-color: black;
+    }
+    img {
+      opacity: 0.8;
+    }
+    @include breakpoint($large + 1) {
+      flex: 0 1 66.66%;
+    }
+    @include breakpoint(0 $large) {
+      flex: 0 1 50%;
+    }
+    video {
+      height: auto;
+      left: 50%;
+      overflow: hidden;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   &.long-title {
-	.brick-text {
-	  @include font-size(18px);
+    .brick-text {
+      @include font-size(18px);
 
-	  @include breakpoint(0 1100px) {
-			@include font-size(16px);
-	  }
+      @include breakpoint(0 1100px) {
+        @include font-size(16px);
+      }
 
-	  @include breakpoint(0 680px) {
-		@include font-size(14px);
-	  }
-	}
+      @include breakpoint(0 680px) {
+        @include font-size(14px);
+      }
+    }
   }
 
   .fixed-ratio-content {
-	visibility:visible;
-	//@include transition(opacity 0.5s $ease);
+    visibility: visible;
+    //@include transition(opacity 0.5s $ease);
   }
 
   .brick-trigger {
-	//background:$light-gray;
-	& * {
-	  pointer-events:none;
-	}
-	img {
-	  &.asset-flavour-bomb,
-	  &.asset-video,
-	  &.bg-animation {
-		transform: scale(1);
-	  }
+    //background:$light-gray;
+    & * {
+      pointer-events: none;
+    }
+    img {
+      &.asset-flavour-bomb,
+      &.asset-video,
+      &.bg-animation {
+        transform: scale(1);
+      }
 
-	  &.asset-video {
-		left:50%;
-		position:absolute;
-		top:50%;
-		transform: scale(1) translate(-50%, -50%);
-		transform-origin: 50%, 50%;
-	  }
+      &.asset-video {
+        left: 50%;
+        position: absolute;
+        top: 50%;
+        transform: scale(1) translate(-50%, -50%);
+        transform-origin: 50%, 50%;
+      }
 
-	  transform: scale(1.05);
-	  transition: transform 2.5s ease;
-	}
-	&:hover {
-	  .btn-play {
-		transform: scale(1.05) translate(-50%, -50%);
-	  }
-	  img {
-		transform: scale(1);
-
-		&.asset-video {
-		  transform: scale(1) translate(-50%, -50%);
-		}
-	  }
-	}
-	.brick-plain-profile{
-	  img{
-			transform: scale(1);
-	  }
-	   &:hover{
-		 	img{
-		  	transform: scale(1);
-		 	}
-	   }
-  	}
+      transform: scale(1.05);
+      transition: transform 2.5s ease;
+    }
+    &:hover {
+      .btn-play {
+        transform: scale(1.05) translate(-50%, -50%);
+      }
+      img {
+        transform: scale(1);
+        &.asset-video {
+          transform: scale(1) translate(-50%, -50%);
+        }
+      }
+    }
+    .brick-plain-profile {
+      img {
+        transform: scale(1);
+      }
+      &:hover {
+        img {
+          transform: scale(1);
+        }
+      }
+    }
   }
 
   .brick-content {
-		display:none;
+    display: none;
   }
 
   video {
-		height:100%;
-		width:100%;
+    height: 100%;
+    width: 100%;
   }
-
+  .brick-plus {
+    display: inline-block;
+  }
   &.brick-dark {
-	.brick-text {
-	  color:white;
-	}
-	.brick-plus {
-	  background-color:black;
+    .brick-text {
+      color: white;
+    }
+    .brick-plus {
+      background-color: black;
 
-	  path {
-		fill:white;
-	  }
-	}
+      path {
+        fill: white;
+      }
+    }
   }
   &.brick-light {
-	.brick-text {
-	  color:black;
-	}
-	.brick-plus {
-	  background-color:white;
+    .brick-text {
+      color: black;
+    }
+    .brick-plus {
+      background-color: white;
 
-	  path {
-		fill:black;
-	  }
-	}
+      path {
+        fill: black;
+      }
+    }
 
-	.brick-content-thumb {
-	  path {
-		fill:white;
-	  }
-	}
+    .brick-content-thumb {
+      path {
+        fill: white;
+      }
+    }
   }
 
   .brick-text {
-	bottom:18px;
-	//color:black;
-	font-family:$avant-garde-bold;
-	left:20px;
-	line-height:0.9;
-	margin:0;
-	position:absolute;
-	text-transform:uppercase;
-	@include font-size(22px);
+    bottom: 18px;
+    //color:black;
+    font-family: $avant-garde-bold;
+    left: 20px;
+    line-height: 0.9;
+    margin: 0;
+    position: absolute;
+    text-transform: uppercase;
+    @include font-size(22px);
 
-	@include breakpoint(0 1100px) {
-	  bottom:10px;
-	  @include font-size(18px);
-	}
+    @include breakpoint(0 1100px) {
+      bottom: 10px;
+      @include font-size(18px);
+    }
 
-	@include breakpoint(0 1024px) {
-	  left:10px;
-	}
+    @include breakpoint(0 1024px) {
+      left: 10px;
+    }
 
-	@include breakpoint(0 $mq-mobile) {
-	  @include font-size(12px);
-	}
+    @include breakpoint(0 $mq-mobile) {
+      @include font-size(12px);
+    }
 
-	span {
-	  font-family:$avant-garde-book;
-	}
+    span {
+      font-family: $avant-garde-book;
+    }
   }
 
   .brick-quotes-container {
-	position:absolute;
-	left:20px;
-	bottom:20px;
-	right:20px;
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    right: 20px;
 
-	.brick-text {
-	  display:block;
-	  position:relative;
-	  left:0;
-	  bottom:0;
-	}
-	.brick-text-quotes {
-	  text-transform:none;
-	  line-height:1.1;
-	  font-family:$avant-garde-book;
-	  margin:0 0 25px 0;
-	  max-width:300px;
-	  @include font-size(30px);
-	  @include breakpoint(0 1200px) {
-		@include font-size(24px);
-
-	  }
-	  @include breakpoint(0 1024px) {
-		@include font-size(30px);
-	  }
-	  @include breakpoint(0 680px) {
-		@include font-size(20px);
-		margin:0 0 10px 0;
-		padding-right:10px;
-	  }
-	  span {
-		font-family:$avant-garde-bold;
-	  }
-	}
-	.brick-text-quotes-name {
-	  font-family:$proxima;
-	  padding-right:20px;
-	  //text-transform:none;
-	  @include font-size(16px);
-	  strong {
-		display:block;
-		font-weight:700;
-		font-family:$proxima;
-		margin:0 0 8px 0;
-		text-transform:uppercase;
-	  }
-	  @include breakpoint(0 680px) {
-			@include font-size(12px);
-	  }
-	}
+    .brick-text {
+      display: block;
+      position: relative;
+      left: 0;
+      bottom: 0;
+    }
+    .brick-text-quotes {
+      text-transform: none;
+      line-height: 1.1;
+      font-family: $avant-garde-book;
+      margin: 0 0 25px 0;
+      max-width: 300px;
+      @include font-size(30px);
+      @include breakpoint(0 1200px) {
+        @include font-size(24px);
+      }
+      @include breakpoint(0 1024px) {
+        @include font-size(30px);
+      }
+      @include breakpoint(0 680px) {
+        @include font-size(20px);
+        margin: 0 0 10px 0;
+        padding-right: 10px;
+      }
+      span {
+        font-family: $avant-garde-bold;
+      }
+    }
+    .brick-text-quotes-name {
+      font-family: $proxima;
+      padding-right: 20px;
+      //text-transform:none;
+      @include font-size(16px);
+      strong {
+        display: block;
+        font-weight: 700;
+        font-family: $proxima;
+        margin: 0 0 8px 0;
+        text-transform: uppercase;
+      }
+      @include breakpoint(0 680px) {
+        @include font-size(12px);
+      }
+    }
   }
 
   .brick-plus {
-		//background-color:white;
-		bottom:0;
-		height:40px;
-		position:absolute;
-		right:0;
-		width:40px;
-		text-align:center;
-		z-index:10;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+    //background-color:white;
+    bottom: 0;
+    height: 40px;
+    position: absolute;
+    right: 0;
+    width: 40px;
+    text-align: center;
+    z-index: 10;
+    display: inline-block;
+    padding: 12px;
   }
 
   .brick-content-thumb {
-	background-color:rgba(0, 0, 0, 0.5);
-	height:100%;
-	max-height:294px;
-	position:absolute;
-	text-align:center;
-	line-height:1;
-	top:50%;
-	left:50%;
-	max-width:294px;
-	width:100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	transform-origin: 0, 0;
-	transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    max-height: 294px;
+    position: absolute;
+    text-align: center;
+    line-height: 1;
+    top: 50%;
+    left: 50%;
+    max-width: 294px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transform-origin: 0, 0;
+    transform: translate(-50%, -50%);
 
-	@include breakpoint(0 $mq-tablet) {
-	  max-width:254px;
-	  max-height:254px;
-	}
-	p {
-
-	  margin:0 0 20px 0;
-	  font-family:$avant-garde-bold;
-	  text-transform:uppercase;
-	  @include font-size(30px);
-	}
-	span {
-	  display:block;
-	  font-family:$avant-garde-book;
-	  margin:10px 0;
-	  text-transform:none;
-	  @include font-size(18px);
-	}
-
+    @include breakpoint(0 $mq-tablet) {
+      max-width: 254px;
+      max-height: 254px;
+    }
+    p {
+      margin: 0 0 20px 0;
+      font-family: $avant-garde-bold;
+      text-transform: uppercase;
+      @include font-size(30px);
+    }
+    span {
+      display: block;
+      font-family: $avant-garde-book;
+      margin: 10px 0;
+      text-transform: none;
+      @include font-size(18px);
+    }
   }
 
   .btn-play {
-	position:absolute;
-	top:50%;
-	left:50%;
-	height:76px;
-	width:76px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 76px;
+    width: 76px;
 
-	transform: translate(-50%, -50%);
-	path {
-	  fill:white;
-	}
+    transform: translate(-50%, -50%);
+    path {
+      fill: white;
+    }
   }
 }
 
 .brick-overlay {
-  margin:$gutter_width/2 0;
-  padding:100px $gutter_width/2;
-  position:relative;
-  width:100%;
+  margin: $gutter_width/2 0;
+  padding: 100px $gutter_width/2;
+  position: relative;
+  width: 100%;
   @include breakpoint(0 $mq-tablet) {
-		padding:40px $gutter_width/2;
-		max-width:430px;
-		margin:0 auto;
+    padding: 40px $gutter_width/2;
+    max-width: 430px;
+    margin: 0 auto;
   }
   &.brick-overlay-video {
-	background:$black;
-	display:block;
-	padding:100px 90px;
-	opacity:0;
-	max-width:100%;
-	transition: opacity 0.5s $ease;
-	@include breakpoint(0 900px) {
-	  padding:60px 45px;
-	}
-	@include breakpoint(0 $mq-mobile) {
-	  padding:60px 30px;
-	}
-	&.active {
-	  opacity:1;
+    background: $black;
+    display: block;
+    padding: 100px 90px;
+    opacity: 0;
+    max-width: 100%;
+    transition: opacity 0.5s $ease;
+    @include breakpoint(0 900px) {
+      padding: 60px 45px;
+    }
+    @include breakpoint(0 $mq-mobile) {
+      padding: 60px 30px;
+    }
+    &.active {
+      opacity: 1;
 
-	  &:before {
-		opacity:1;
-	  }
-	}
+      &:before {
+        opacity: 1;
+      }
+    }
 
-	&:before {
-	  background:$black;
-	  content:"";
-	  display:block;
-	  height:100%;
-	  opacity:0;
-	  position:absolute;
-	  top:0;
-	  width:200vw;
-	  z-index:-1;
-	  translate: -50%, 0;
-	  transition: opacity 0.5s $ease;
-	  @include breakpoint(0 1024px) {
-			display:none;
-	  }
-	}
-	.brick-close {
-	  &.active {
-		&:before {
-		  box-shadow: inset 0px 0px 0px 0px #000000;
-		}
-	  }
-	  &:before {
-		box-shadow: inset 0px 0px 0px 30px #000000;
-	  }
-	}
-	.icon {
-	  path {
-		fill:$white;
-	  }
-	}
+    &:before {
+      background: $black;
+      content: "";
+      display: block;
+      height: 100%;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      width: 200vw;
+      z-index: -1;
+      translate: -50%, 0;
+      transition: opacity 0.5s $ease;
+      @include breakpoint(0 1024px) {
+        display: none;
+      }
+    }
+    .brick-close {
+      &.active {
+        &:before {
+          box-shadow: inset 0px 0px 0px 0px #000000;
+        }
+      }
+      &:before {
+        box-shadow: inset 0px 0px 0px 30px #000000;
+      }
+    }
+    .icon {
+      path {
+        fill: $white;
+      }
+    }
   }
 
   .brick-close {
-	position:absolute;
-	right:8px;
-	top:40px;
-	width:36px;
-	height:36px;
-	padding:0;
+    position: absolute;
+    right: 8px;
+    top: 40px;
+    width: 36px;
+    height: 36px;
+    padding: 0;
 
-	@include breakpoint(0 820px) {
-	  width:20px;
-	  height:20px;
-	  top:10px;
-	  right:0;
-	}
-	@include breakpoint(0 $mq-tablet) {
-	  right:8px;
-	}
-	i {
-	  @include breakpoint(0 820px) {
-		width:20px;
-		height:20px;
-	  }
-	}
+    @include breakpoint(0 820px) {
+      width: 20px;
+      height: 20px;
+      top: 10px;
+      right: 0;
+    }
+    @include breakpoint(0 $mq-tablet) {
+      right: 8px;
+    }
+    i {
+      @include breakpoint(0 820px) {
+        width: 20px;
+        height: 20px;
+      }
+    }
 
-	&:focus {
-	  outline:none;
-	}
-	&::-moz-focus-inner {
-	  border:0;
-	}
+    &:focus {
+      outline: none;
+    }
+    &::-moz-focus-inner {
+      border: 0;
+    }
 
-	&.active {
-	  &:before {
-		box-shadow: inset 0px 0px 0px 0px #ffffff;
-	  }
-	}
-	&:before {
-	  //background-color:red;
-	  content:"";
-	  position:absolute;
-	  top:50%;
-	  left:50%;
-	  width:100%;
-	  height:100%;
-	  transform-origin: 50%, 50%;
-	  box-shadow: inset 0px 0px 0px 30px #ffffff;
-	  transform: translate(-50%, -50%);
-	  transition: box-shadow 1s ease;
-	  @include breakpoint(0 900px) {
-		width:120%;
-		height:120%;
-	  }
-	}
+    &.active {
+      &:before {
+        box-shadow: inset 0px 0px 0px 0px #ffffff;
+      }
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      transform-origin: 50%, 50%;
+      box-shadow: inset 0px 0px 0px 30px #ffffff;
+      transform: translate(-50%, -50%);
+      transition: box-shadow 1s ease;
+      @include breakpoint(0 900px) {
+        width: 120%;
+        height: 120%;
+      }
+    }
   }
 }
 
 .brick-bio {
   .brick-bio-title {
-	color:white;
-	font-family:$proxima;
-	font-weight:400;
-	text-transform:none;
-	@include font-size(18px);
+    color: white;
+    font-family: $proxima;
+    font-weight: 400;
+    text-transform: none;
+    @include font-size(18px);
 
-	@include breakpoint(0 680px) {
-	  @include font-size(16px);
-	}
+    @include breakpoint(0 680px) {
+      @include font-size(16px);
+    }
 
-	strong {
-	  display:block;
-	  font-family:$avant-garde-bold;
-	  text-transform:uppercase;
-	  @include font-size(46px);
+    strong {
+      display: block;
+      font-family: $avant-garde-bold;
+      text-transform: uppercase;
+      @include font-size(46px);
 
-	  @include breakpoint(0 680px) {
-		@include font-size(40px);
-	  }
-	}
+      @include breakpoint(0 680px) {
+        @include font-size(40px);
+      }
+    }
   }
 }
 
 .brick-explaination {
   .fixed-ratio.fixed-ratio-square:after {
+    @include breakpoint(0 $mq-tablet) {
+      padding-top: 50%;
+    }
 
-	@include breakpoint(0 $mq-tablet) {
-	  padding-top:50%;
-	}
-
-	@include breakpoint(0 375px) {
-	  padding-top:75%;
-	}
+    @include breakpoint(0 375px) {
+      padding-top: 75%;
+    }
   }
 }
-
