--- a/src/components/Products/fixed_ratios.scss
+++ b/src/components/Products/fixed_ratios.scss
@@ -3,77 +3,86 @@
 -------------------------------------------------------------------*/
 
 .fixed-ratio {
-	display:block;
-	position:relative;
-	width:100%;
+  display: block;
+  position: relative;
+  width: 100%;
 
-	.after,
-	&:after {
-		display:block;
-		content:'';
-	}
+  .after,
+  &:after {
+    display: block;
+    content: "";
+  }
 
-	.fixed-ratio-content {
-		display:block;
-		position:absolute;
-		top:0; bottom:0; right:0; left:0;
-		overflow:hidden;
+  .fixed-ratio-content {
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    overflow: hidden;
 
-		img{width:100%; height:auto;}
-		iframe {width:100%; height:100%;}
+    img {
+      width: 100%;
+      height: auto;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+    }
 
-		.logo-video {
-			width:auto;
-			max-width:160px;
-			height:auto;
-			opacity:1;
-			position:absolute;
-			bottom:20px;
-			left:20px;
-			transform: scale(1);
-			transition: none;
-		}
-	}
+    .logo-video {
+      width: auto;
+      max-width: 160px;
+      height: auto;
+      opacity: 1;
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      transform: scale(1);
+      transition: none;
+    }
+  }
 
-	// Ratio 4:3
-	&.fixed-ratio-screen {
-		.after,
-		&:after {
-			padding-top:75%;
-		}
-	}
+  // Ratio 4:3
+  &.fixed-ratio-screen {
+    .after,
+    &:after {
+      padding-top: 75%;
+    }
+  }
 
-	// Ratio 16:9
-	&.fixed-ratio-widescreen {
-		.after,
-		&:after {
-			padding-top:56.25%;
-		}
-	}
+  // Ratio 16:9
+  &.fixed-ratio-widescreen {
+    .after,
+    &:after {
+      padding-top: 56.25%;
+    }
+  }
 
-	// Ratio 1:1
-	&.fixed-ratio-square {
-		.after,
-		&:after {
-			padding-top:100%;
-		}
-	}
+  // Ratio 1:1
+  &.fixed-ratio-square {
+    .after,
+    &:after {
+      padding-top: 100%;
+    }
+  }
 
-	// Ratio double brick
-	&.fixed-ratio-double-brick {
-		.after,
-		&:after {
-			padding-top:calc(50% - #{$gutter_width}/2);
+  // Ratio double brick
+  &.fixed-ratio-double-brick {
+    .after,
+    &:after {
+      padding-top: calc(50% - #{$gutter_width}/ 2);
 
-			@include breakpoint(0 1024px) {
-				padding-top:100%;
-			}
-		}
-	}
+      @include breakpoint(0 1024px) {
+        padding-top: 100%;
+      }
+    }
+  }
 }
 
-.fixed-ratio-double-brick .fixed-ratio-content img{
-	@include breakpoint(0 1024px) {
-		width:auto;
-	}
+.fixed-ratio-double-brick .fixed-ratio-content img {
+  @include breakpoint(0 1024px) {
+    width: auto;
+  }
 }
