--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -135,6 +135,10 @@ div[role="group"][tabindex] {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.nowrap {
+	white-space: nowrap;
+}
+
 .text-center {
 	text-align: center;
 }
